environments/sandbox-oci/whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirectscheme@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - whoami.benkonicek.com
      secretName: whoami-cert-new
  rules:
    - host: whoami.benkonicek.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-deployment
                port:
                  number: 80
